--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Flare</title>
+    <title>BlackInk | Digital Communication</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -52,7 +52,7 @@
 
         <div class="s-header__logo">
             <a href="index.html">
-                <img src="images/logo.svg" alt="Homepage">
+                <img src="images/logo22.svg" width="120" height="120" alt="Homepage">
             </a>
         </div>
 
@@ -90,11 +90,11 @@
         <div class="row s-hero__content">
             <div class="column">
 
-                <h1>Hello.</h1>
+                <h1>BlackInk</h1>
                 <div class="s-hero__content-about">
 
                     <p>
-                    We are Flare. We love <br>
+                    We are BlackInk. We love <br>
                     building great brands <br>
                     & digital experiences.
                     </p>
@@ -145,7 +145,7 @@
 
             <div class="column large-6 w-900-stack s-about__intro-text">
                 <h1 class="display-1" data-aos="fade-up">
-                    Flare is a branding agency based in somewhere. We design thoughtful digital experiences and beautiful brand aesthetics.
+                    BlackInk is a branding agency based in somewhere. We design thoughtful digital experiences and beautiful brand aesthetics.
                 </h1>
 
                 <p class="lead" data-aos="fade-up">
@@ -471,10 +471,10 @@
                         Laudantium quia consequatur molestias delectus culpa.
                         </p>
                         <div class="testimonial-slider__author">
-                            <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonial-slider__avatar">
+                            <img src="images/nonso.svg" alt="Author image" class="testimonial-slider__avatar">
                             <cite class="testimonial-slider__cite">
-                                <strong>Tim Cook</strong>
-                                <span>CEO, Apple</span>
+                                <strong>Nonso John</strong>
+                                <span>CEO BlackInk Communications</span>
                             </cite>
                         </div>
                     </div> <!-- end testimonials__slide -->
@@ -552,7 +552,7 @@
         <div class="row h-text-center">
             <div class="column">
                 <p class="s-contact__email">
-                    <a href="mailto:#0">hello@flare.com</a>
+                    <a href="mailto:#0">hello@blackink.ng</a>
                 </p>
             </div>
         </div>
@@ -573,7 +573,7 @@
                         <p>
                         1600 Amphitheatre Parkway <br>
                         Mountain View, California <br>
-                        94043  US <br>
+                        94043  Lagos Nigeria <br>
                         <a href="tel:197-543-2345">+197 543 2345</a>
                         </p>
                     </div>
@@ -595,8 +595,8 @@
                 <a href="mailto:#0" class="btn h-full-width">Let's Talk</a>
 
                 <div class="ss-copyright">
-                    <span>Copyright Flare 2020</span> 
-                    <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
+                    <span>Copyright BlackInk Communications 2020</span> 
+                    <span>Design by <a href="https://www.iyke.netlify.app/">Iyke E.</a></span>
                 </div>
             </div>
 
