refactor: meet the team header

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         <!-- </div> end row -->
     <!-- ========================================= Meet the team ======================================================             -->
         <div class="row" style="text-align: justify; justify-self: start;">
-            <div class="section-title large-3" data-num="03" data-aos="fade-up">
+            <div class="column section-title large-3 mob-12" data-num="03" data-aos="fade-up">
                 <h3 class="h6">MEET THE TEAM</h3>
             </div>
             <div class="mob-12 large-9 tab-7" style=" margin-top: 4rem;">
@@ -544,7 +544,7 @@
             <div class="large-4 mob-12">
                 <div class="testimonial-slider__author">
                     <div class="team">
-                        <img src="images/logo-white.svg" alt="Iyke" class="testimonial-slider__avatar2">
+                        <img src="images/logo-white.svg" alt="Iyke" style="opacity: .5;" class="testimonial-slider__avatar2">
                         <cite class="testimonial-slider__cite">
                             <strong>Ikechukwu Ezugworie</strong>
                             <span>Head, Web Development</span>
