refactor: team avatar

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                 </div>
             </div>
         
-            <div class="large-4 mob-12 column">
+            <div class="large-4 mob-12 column" style="display: flex; align-items: center;">
                 <div class="testimonial-slider__author">
                     <div class="team">
                         <img src="images/dumebi.jpg" alt="Dumebi" class="testimonial-slider__avatar2">
