--- a/index.html
+++ b/index.html
@@ -516,10 +516,10 @@
         <!-- </div> end row -->
     <!-- ========================================= Meet the team ======================================================             -->
         <div class="row" style="text-align: justify; justify-self: start;">
-            <div class="column section-title large-3 mob-12" data-num="03" data-aos="fade-up">
+            <div class="column section-title large-4 mob-12" data-num="03" data-aos="fade-up">
                 <h3 class="h6">MEET THE TEAM</h3>
             </div>
-            <div class="mob-12 large-9 tab-7" style=" margin-top: 4rem;">
+            <div class="mob-12 large-8 tab-7" style=" margin-top: 4rem;">
                 <p class="attention-getter">We're a team of thinkers, writers, builders and artists.
                     We approach work and play with equal parts curiosity and wonder. And we combine a wealth of experience from some of
                 Africa's most successful agencies, production studios, and startups.</p>
@@ -541,7 +541,7 @@
                 </div>
             </div>
         
-            <div class="large-4 mob-12">
+            <div class="large-4 mob-12" style="display: flex; align-items: center;">
                 <div class="testimonial-slider__author">
                     <div class="team">
                         <img src="images/logo-white.svg" alt="Iyke" style="opacity: .5;" class="testimonial-slider__avatar2">
@@ -603,7 +603,7 @@
 <footer class="s-footer">
     <div class="row row-y-top">
 
-        <div class="column large-6 medium-12">
+        <div class="column large-6 medium-6 mob-12">
             <div class="row">
                 <div class="column large-7 tab-12 s-footer__block">
                     <h4 class="h6">Where we are?</h4>
@@ -626,7 +626,7 @@
             </div>
         </div>
 
-        <div class="column large-6 medium-12 s-footer__block--end">
+        <div class="column large-6 medium-6 mob-12 s-footer__block--end">
             <a href="#contact" class="btn h-full-width">Let's Talk</a>
 
             <div class="ss-copyright">
