refactor: contact address

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
     <div class="row h-text-center" id="contact">
         <div class="column">
             <p class="s-contact__email">
-                <a href="mailto:#0" target="_blank">hello@blackink.ng</a>
+                <a href="mailto:jezugworie@gmail.com" target="_blank">hello@blackink.ng</a>
             </p>
         </div>
     </div>
