--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
         <div class="row s-hero__content">
             <div class="column">
 
-                <h1 class="display-2">Hi</h1>
+                <h1 class="display-2">Hello</h1>
                 <div class="s-hero__content-about">
 
-                    <p>
-                        At BlackInk Communications, we launch winning brands and build extraordinary digital experiences.</p>
+                    <p>We are BlackInk.<br> 
+                    We launch winning brands,<br>and build extraordinary digital experiences.</p>
                     <footer>
                         <div class="s-hero__content-social">
                             <!-- <a href="#0"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
