--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
             </div>
 
             <div class="column large-6 w-900-stack s-about__intro-text">
-                <h1 class="display-1" data-aos="fade-up">
-                    BlackInk is a digital brands communications agency.
+                <h2 data-aos="fade-up">
+                    BlackInk is a digital brands communications agency. <br>
                     We create and execute effective digital communication experiences at
                     the intersection of Culture, Design and Technology.
-                </h1>
+                </h2>
 
                 <p class="lead" data-aos="fade-up">
-                    <span style="font-style: italic;">It's why we have <strong style="color:white">90% repeat clients</strong> rate in the past twelve months.</span>
+                    <span style="font-style: italic;">It's why we have <strong>90% repeat clients</strong> rate in the past twelve months.</span>
                 </p>
             </div>
 
@@ -250,10 +250,8 @@
             </div>
             <div class="column item item-service" data-aos="fade-up">
                 <span class="service-icon service-icon--research"></span>
-                <h3 class="item-title">Search Social and Display Ads.</h3>
-                <p>To reach out beyond your existing network and tap into new, highly targeted audience through search, social or display
-                advertising, online advertising is the way. 
-                At BlackInk, we're particularly skilled here.
+                <h3 class="item-title">Search and Display Ads.</h3>
+                <p>To reach out beyond your existing network and tap into new, highly targeted audience, search and display advertising is your best bet. At Black Ink, we're particularly skilled here.
                 </p>
             </div>
             <div class="column item item-service" data-aos="fade-up">
@@ -519,9 +517,10 @@
             <div class="column section-title large-4 mob-12" data-num="03" data-aos="fade-up">
                 <h3 class="h6">MEET THE TEAM</h3>
             </div>
-            <div class="mob-12 large-8 tab-7" style=" margin-top: 4rem;">
-                <p class="attention-getter">We're a team of thinkers, writers, builders and artists.
-                    We approach work and play with equal parts curiosity and wonder. And we combine a wealth of experience from some of
+            <div class="mob-12 large-8 tab-7" style=" margin-top: 2rem;">
+                <p class="attention-getter">We're a team of thinkers, writers, builders and artists. <br>
+                    We approach work and play with equal parts curiosity and wonder. <br>
+                    And we combine a wealth of experience from some of
                 Africa's most successful agencies, production studios, and startups.</p>
             </div>
         </div> <!-- Row End-->
@@ -544,10 +543,10 @@
             <div class="large-4 mob-12" style="display: flex; align-items: center;">
                 <div class="testimonial-slider__author">
                     <div class="team">
-                        <img src="images/logo-white.svg" alt="Iyke" style="opacity: .5;" class="testimonial-slider__avatar2">
+                        <img src="images/logo-black.svg" alt="Iyke" style="opacity: .5;" class="testimonial-slider__avatar2">
                         <cite class="testimonial-slider__cite">
                             <strong>Ikechukwu Ezugworie</strong>
-                            <span>Head, Web Development</span>
+                            <span>Head, Design and Development</span>
                         </cite>
                     </div>
                 </div>
@@ -559,7 +558,7 @@
                         <img src="images/dumebi.jpg" alt="Dumebi" class="testimonial-slider__avatar2">
                         <cite class="testimonial-slider__cite">
                             <strong>Dumebi Iwuchukwu</strong>
-                            <span>Head, UI/UX Design</span>
+                            <span>Head, UI/UX</span>
                         </cite>
                     </div>
                 </div>
@@ -580,7 +579,7 @@
     <div class="row narrower s-contact__top h-text-center">
         <div class="column">
             <h3 class="h6" id="contact">Get In Touch</h3>
-            <h1 class="display-1">
+            <h1 class="display-1" style="color:white">
                 We're always excited to hear from you.
                 Shoot us a message at
             </h1>
@@ -607,11 +606,10 @@
             <div class="row">
                 <div class="column large-7 tab-12 s-footer__block">
                     <h4 class="h6">Where we are?</h4>
-
-                    <p>
+                    <h5 style="color:white">
                         5, Ajana Close, Bamako Estate, Ojodu Lagos, Nigeria. <br>
                         <a href="tel:+234-703-263-9378">+234 703 263 9378</a>
-                    </p>
+                    </h5>
                 </div>
 
                 <!-- <div class="column large-5 tab-12 s-footer__block">
@@ -630,7 +628,7 @@
             <a href="#contact" class="btn h-full-width">Let's Talk</a>
 
             <div class="ss-copyright">
-                <span><h6>Powered by</h6> 
+                <span><h6 style="color:white">Powered by</h6> 
                     <a href="#top">
                         <img src="images/logo.svg" width="100px" height="100px" />
                     </a>
