fix: :pencil2: landing hero

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 <h1 class="display-2">Hello</h1>
                 <div class="s-hero__content-about">
 
-                    <p>We are BlackInk.<br> 
-                    We launch winning brands,<br>and build extraordinary digital experiences.</p>
+                    <p>We are BlackInk.<br/> 
+                    We launch winning brands, <br/>and build extraordinary digital experiences.</p>
                     <footer>
                         <div class="s-hero__content-social">
                             <!-- <a href="#0"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
