--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                     <div class="team">
                         <img src="images/logo-black.svg" alt="Iyke" style="opacity: .5;" class="testimonial-slider__avatar2">
                         <cite class="testimonial-slider__cite">
-                            <strong>Ikechukwu Ezugworie</strong>
+                            <strong>John Paul</strong>
                             <span>Head, Design and Development</span>
                         </cite>
                     </div>
